--- a/package.json
+++ b/package.json
@@ -87,40 +87,40 @@
   },
   "homepage": "https://github.com/mrkmg/node-generate-release#readme",
   "dependencies": {
-    "es6-shim": "^0.35.3",
-    "glob": "^7.1.2",
+    "es6-shim": "^0.35.5",
+    "glob": "^7.1.6",
     "iniparser": "^1.0.5",
-    "inquirer": "^3.3.0",
-    "minimist": "^1.2.0",
-    "observatory": "^1.0.0",
-    "rimraf": "^2.6.2",
-    "temp": "^0.8.3",
-    "xtend": "^4.0.1"
+    "inquirer": "^7.1.0",
+    "minimist": "^1.2.5",
+    "observatory": "adamcohenrose/observatory#master",
+    "rimraf": "^3.0.2",
+    "temp": "^0.9.1",
+    "xtend": "^4.0.2"
   },
   "devDependencies": {
-    "@types/chai": "^4.1.3",
-    "@types/chai-as-promised": "^7.1.0",
-    "@types/es6-shim": "^0.31.36",
-    "@types/glob": "^5.0.35",
+    "@types/chai": "^4.2.11",
+    "@types/chai-as-promised": "^7.1.2",
+    "@types/es6-shim": "^0.31.39",
+    "@types/glob": "^7.1.1",
     "@types/iniparser": "0.0.29",
-    "@types/inquirer": "0.0.41",
+    "@types/inquirer": "^6.5.0",
     "@types/minimist": "^1.2.0",
-    "@types/mocha": "^5.2.0",
-    "@types/node": "^4",
-    "@types/rimraf": "^2.0.2",
-    "@types/sinon": "^4.3.1",
-    "@types/temp": "^0.8.32",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^13.13.0",
+    "@types/rimraf": "^3.0.0",
+    "@types/sinon": "^9.0.0",
+    "@types/temp": "^0.8.34",
     "@types/xtend": "^4.0.2",
-    "chai": "^4.1.2",
+    "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "istanbul": "^0.4.5",
     "istanbul-coveralls": "^1.0.3",
-    "mocha": "^5.1.1",
-    "nyc": "^11.2.1",
-    "sinon": "^5.0.3",
-    "source-map-support": "^0.5.5",
-    "ts-node": "^6.0.2",
-    "tslint": "^5.9.1",
-    "typescript": "^2.8.3"
+    "mocha": "^7.1.1",
+    "nyc": "^15.0.1",
+    "sinon": "^9.0.2",
+    "source-map-support": "^0.5.17",
+    "ts-node": "^8.8.2",
+    "tslint": "^6.1.1",
+    "typescript": "^3.8.3"
   }
 }
